# PyMapManager

./: .gitignore  404.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  readme-class-heirarchy.md  readme-dev.md  readme.md  requirements.txt  setup.py  sitemap.xml  tox.ini
.github/workflows/: create-release.yml  publish-to-pypi.yml  publish-to-pypi.yml_  publish_to_pypi.yml  release.yml  test.yml  tests.yml
PyQtMapManager/: main.py
about/: index.html
api/map/: index.html
api/overview/: index.html
api/stack/: index.html
data/: example_tracing.swc
dev-notes/: index.html  pymapmanager-todo-20241115.md
docs/: mkdocs.yml  open-source.md
download/: index.html
examples/: i - stack.ipynb
install/: index.html
install-pymapmanager/: index.html
install-server/: index.html
mmNapari/: readme.md  simpleExample.py
notebooks/: find-brightest-path.ipynb  readme.md
open-source/: index.html
plugins/: index.html
pyinstaller/: windows.spec
pymapmanager/: __init__.py  _io.py  _logger.py  analysisParams.py  detectionParams.py  logger.py  map.py  mmMap.py  mmStack.py  mmStackLine.py  mmUndo.py  options.py  pmmUtils.py  stack.py  stackcontras.py  timeseriesCore.py  utils.py  version.py
release-notes/: index.html
rest-api/: index.html
sandbox/: debugPointSize.py  debugRoiCandidate.py  dragScatter.py  exportAllSpineROI.py  jBrightestIndex.py  jSaveBrightestIndexes.py  johnsonRadiusLines.py  johnsonTestPIL.py  medFilterExample.py  mpSpineInt.py  myStateMachine.py  pgDrawRect.py  pgPolygon_chatgpt.py  pgPolygon_chatgpt_2.py  plotBackgroundROI.py  plotTestMasks.py  runMap.py  runStackWidget.py  sandboxShapelySelection.py  shapelyAndGeoPandas.py  shapelyAndGeoPandasCopy.py  testBrightestIndex.py  testEmptyLayers.py  testLayers.py  testLayersPyqt.py  testMedFilt.py  testPaths.py  testROIplots.py  testSearchWidget3.py  testShapes2.py  testTableView.py  traceInFiji.py  tryImportSecondChannel.py  tstFilterTable.py  webmapmanagerMain.py
search/: search_index.json
tests/: test_baseAnnotations.py  test_core_segments.py  test_core_spines.py  test_lineAnnotations.py  test_mmMap.py  test_point_annotations.py  test_scatterPlotWindow.py  test_searchWidget.py  test_stack.py  test_updateSpineInt.py
v2/: localInstall  readme-dev.md  setup.py
web-help/: index.html
(+309 files in other folders)
